add: result point and lose user

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
         </nav>
         <main>
             <div class="grid"></div>
+            <h1 class="text-lose">Hai perso!! Riprova.</h1>
+            <h1>Il tuo punteggio è: <span class="point-user"></span></h1>
             
 
 
